package metadata;

option java_package="com.adeneche.metadata";
option java_outer_classname="Metadata";

message ParquetTableMetadata {
  optional string metadata_version = 1;

  message ColumnTypeInfo {
    optional string name = 1;

    enum PrimitiveTypeName {
      INT64=0;
      INT32=1;
      BOOLEAN=2;
      BINARY=3;
      FLOAT=4;
      DOUBLE=5;
      INT96=6;
      FIXED_LEN_BYTE_ARRAY=7;
    }

    optional PrimitiveTypeName primitiveType = 2;

    enum OriginalType {
      MAP=0;
      LIST=1;
      UTF8=2;
      MAP_KEY_VALUE=3;
      ENUM=4;
      DECIMAL=5;
      DATE=6;
      TIME_MILLIS=7;
      TIMESTAMP_MILLIS=8;
      UINT_8=9;
      UINT_16=10;
      UINT_32=11;
      UINT_64=12;
      INT_8=13;
      INT_16=14;
      INT_32=15;
      INT_64=16;
      JSON=17;
      BSON=18;
      INTERVAL=19;
    }

    optional OriginalType originalType = 3;
  }

  repeated ColumnTypeInfo columns = 2;

  message ParquetFileMetadata {
    optional string path = 1;
    optional int64 length = 2;

    message RowGroup {
      optional int64 start = 1;
      optional int64 length = 2;
      optional int64 rowCount = 3;

      message HostAffinity {
        optional string key = 1;
        optional float value = 2;
      }

      repeated HostAffinity affinities = 4;

      message ColumnMetadata {
        required int32 name = 1;
        optional int64 nulls = 2;
        optional string mxValue = 3;
      }

      repeated ColumnMetadata columns = 5;
    }

    repeated RowGroup rowGroups = 3;
  }

  repeated ParquetFileMetadata files = 3;

  repeated string directories = 4;
}